<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homescreen"
            type="com.doodle.crud.view.HomeActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:background="@color/white"
        tools:context=".view.LoginActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_username_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_username_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_str"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_mobile_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_username_TL"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_mobile_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number_str"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/form_save_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/save_str"
            android:onClick="@{(view)-> homescreen.onSaveClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_mobile_TL"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/form_edit_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/edit"
            android:visibility="gone"
            android:onClick="@{(view)-> homescreen.onEditClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_save_BUT"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/form_delete_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/delete"
            android:visibility="gone"
            android:onClick="@{(view)-> homescreen.onDeleteClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/form_edit_BUT"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

