<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.doodle.crud.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.LoginActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_Email_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_Email_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_str"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={login.email}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_Pwd_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_Email_TL"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_Pwd_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_str"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={login.password}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/form_login_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:onClick="@{(view)-> login.onLoginClick(view)}"
            android:text="@string/login_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/form_signup_BUT"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_Pwd_TL"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/form_signup_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:onClick="@{(view)-> login.onSignupClick(view)}"
            android:text="@string/signup_str"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/form_login_BUT"
            app:layout_constraintTop_toBottomOf="@+id/Form_Pwd_TL"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
