<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        
        <variable
            name="dialog"
            type="com.doodle.crud.viewmodel.LoginViewModel" />

        <variable
            name="signup"
            type="com.doodle.crud.viewmodel.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        tools:context=".view.LoginActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signup_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_10"
            android:text="SIGNUP"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_username_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_txt"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_username_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_str"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={signup.username}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_Email_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_username_TL"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_Email_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_str"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={signup.email}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_Pwd_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_Email_TL"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_Pwd_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_str"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={signup.password}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Form_confirm_Pwd_TL"
            style="@style/EditTextBorderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_10"
            app:hintTextAppearance="@style/EditTextBorderStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_Pwd_TL"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Form_confirm_Pwd_EDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_str"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="@dimen/text_padding"
                android:singleLine="true"
                android:text="@={signup.confirmpassword}"
                android:textSize="@dimen/text_size" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/form_signup_BUT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/signup_str"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:onClick="@{(view)-> signup.onLoginClick(view)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Form_confirm_Pwd_TL"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
